[gd_scene load_steps=10 format=3 uid="uid://co2vsk5c4n8ux"]

[ext_resource type="StyleBox" uid="uid://eompj67obq0a" path="res://cenas/responderQuiz/comentario/comentarioCardNormal.tres" id="1_1q1ph"]
[ext_resource type="FontFile" uid="uid://hoguj3iguvyo" path="res://resources/fonts/Nunito/static/Nunito-Black.ttf" id="1_4y6xn"]
[ext_resource type="Script" path="res://cenas/responderQuiz/comentario/comentarioCard.gd" id="1_hc8ui"]
[ext_resource type="FontFile" uid="uid://owxdw1iuxu1p" path="res://resources/fonts/Nunito/static/Nunito-SemiBold.ttf" id="2_vovxk"]

[sub_resource type="FontVariation" id="FontVariation_u5e5g"]
base_font = ExtResource("1_4y6xn")
spacing_glyph = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5t7k4"]
bg_color = Color(0.25098, 0.501961, 0.270588, 1)
border_width_bottom = 5
border_color = Color(0.25098, 0.501961, 0.270588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
expand_margin_left = 11.0
expand_margin_top = 11.0
expand_margin_right = 11.0

[sub_resource type="FontVariation" id="FontVariation_lfkue"]
base_font = ExtResource("1_4y6xn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mxwy2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.172549, 0.2, 0.435294, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eg6h5"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[node name="Comentario" type="PanelContainer" groups=["comentarioCardPergunta"]]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.226389
offset_bottom = -3.0
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("1_1q1ph")
script = ExtResource("1_hc8ui")
metadata/_edit_use_anchors_ = true

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItensDoComentario" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="FixadoPeloCriador" type="Label" parent="Margin/ItensDoComentario"]
visible = false
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_u5e5g")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_5t7k4")
text = "FIXADO PELO CRIADOR"
horizontal_alignment = 1

[node name="NomeUsuarioComentario" type="Label" parent="Margin/ItensDoComentario"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_lfkue")
text = "[Nome do usuário comentador]"

[node name="Itens" type="HBoxContainer" parent="Margin/ItensDoComentario"]
layout_mode = 2

[node name="BotoesCurtir" type="VBoxContainer" parent="Margin/ItensDoComentario/Itens"]
layout_mode = 2

[node name="Curtir" type="Button" parent="Margin/ItensDoComentario/Itens/BotoesCurtir"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2

[node name="Descurtir" type="Button" parent="Margin/ItensDoComentario/Itens/BotoesCurtir"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2

[node name="PainelComentario" type="PanelContainer" parent="Margin/ItensDoComentario/Itens"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mxwy2")

[node name="Comentário" type="Label" parent="Margin/ItensDoComentario/Itens/PainelComentario"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_vovxk")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxEmpty_eg6h5")
text = "Comentário"
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 3
